Re-write the new project wizard

--- a/src/io/flutter/FlutterBundle.properties
+++ b/src/io/flutter/FlutterBundle.properties
@@ -227,3 +227,9 @@ settings.hot.reload.on.save=Perform hot reload on save
 settings.disable.tracking.widget.creation=Disable tracking widget creation locations
 settings.enable.bazel.test.runner=Enable new Bazel test runner
 settings.hot.reload.with.error=Reload even if there are analysis errors
+
+studio.npw.select.template=Select a Project Template
+studio.project.create.welcome.action=Create a New Flutter Project
+studio.project.create.menu.action=New Flutter Project...
+studio.project.config.title=Configure Project
+studio.project.gallery.select=Select a project template
