--- a/src/io/flutter/FlutterBundle.properties
+++ b/src/io/flutter/FlutterBundle.properties
@@ -233,3 +233,22 @@ studio.project.create.welcome.action=Create a New Flutter Project
 studio.project.create.menu.action=New Flutter Project...
 studio.project.config.title=Configure Project
 studio.project.gallery.select=Select a project template
+
+studio.npw.template.name=Flutter {0}
+studio.npw.template.description=Creates a new Flutter {0}{1}
+studio.npw.project.name=Project name
+studio.npw.project.hint=The name of the {0}
+studio.npw.package.name=Package name
+studio.npw.package.hint=The package name for new classes
+studio.npw.flutter.sdk.name=Flutter SDK
+studio.npw.flutter.sdk.hint=The path to the Flutter SDK
+studio.npw.save.location.name=Save location
+studio.npw.save.location.hint=The path to the parent directory of the new project
+studio.npw.create.offline.name=Create off-line
+studio.npw.create.offline.hint=If true, this {0} will be created in off-line mode, meaning pub packages will not be downloaded
+studio.npw.use.kotlin.name=Use Kotlin in generated Android code
+studio.npw.use.kotlin.hint=If false, Java will be used
+studio.npw.use.swift.name=Use Swift in generated iOS code
+studio.npw.use.swift.hint=If false, Objective-C will be used
+studio.npw.use.androidx.name=Use legacy android.support libraries
+studio.npw.use.androidx.hint=If true, this plugin uses AndroidX libraries
