--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -21,7 +21,7 @@
 
   <category>Custom Languages</category>
   <version>SNAPSHOT</version>
-  <idea-version since-build="201.7223" until-build="203.*"/>
+  <idea-version since-build="201.7223" until-build="211.*"/>
 
   <depends>com.intellij.modules.platform</depends>
   <depends>com.intellij.modules.lang</depends>
@@ -1549,6 +1549,10 @@
     <colorProvider implementation="io.flutter.editor.FlutterColorProvider"/>
     <codeInsight.lineMarkerProvider language="Dart" implementationClass="io.flutter.editor.FlutterIconLineMarkerProvider"/>
     <errorHandler implementation="io.flutter.FlutterErrorReportSubmitter"/>
+
+    <toolWindow id="Triagemagic" anchor="right" icon="FlutterIcons.State.RedProgr"
+                factoryClass="io.flutter.triagemagic.TriagemagicViewFactory" />
+    <projectService serviceImplementation="io.flutter.triagemagic.TriagemagicView" overrides="false"/>
 
     <toolWindow id="Flutter Outline" anchor="right" icon="FlutterIcons.Flutter_13"
                 factoryClass="io.flutter.preview.PreviewViewFactory"/>
