Add coverage table tool window

--- a/src/io/flutter/FlutterBundle.properties
+++ b/src/io/flutter/FlutterBundle.properties
@@ -238,7 +238,17 @@ coverage.path.not.found=Coverage file not found: {0}
 progress.title.loading.coverage.data=Loading coverage data...
 project.root.not.found=Could not find project root
 coverage.data.not.read=Cannot read coverage data from file: {0}
+coverage.view.text.classes.covered={0}% classes
+coverage.view.text.methods.covered={0}% methods
+coverage.view.node.summary={0} in package ''{1}''
+
 icon.preview.disallow.flutter_icons=Package "flutter_icons" is not supported.
 icon.preview.disallow.flutter_vector_icons=Package "flutter_vector_icons" cannot show previews because it does not include a font file.
 icon.preview.disallow.material_design_icons_flutter=Package "material_design_icons_flutter" always displays blank icon previews.
 icon.preview.disallow.package.title=Unsupported icon package
+sub.coverage.notification=Active per test coverage: no cumulative data is available
+coverage.view.root.node.summary={0} in ''all classes in scope''
+coverage.view.no.coverage=No coverage
+coverage.view.column.class=Class, %
+coverage.view.column.method=Method, %
+coverage.view.column.line=Line, %
